--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,12 @@ dependencies:
   google_fonts: ^6.0.0
   flutter_spinkit: ^5.2.0
   http: ^1.1.0
-  intl: ^0.18.1
+  intl: ^0.20.2
   cached_network_image: ^3.2.3
   equatable:
   bloc:
-  flutter_bloc: ^8.0.1
-  flutter_launcher_icons: "^0.13.1"
+  flutter_bloc: ^9.0.0
+  flutter_launcher_icons: ^0.14.3
 
 flutter_launcher_icons:
   android: "launcher_icon"
@@ -58,7 +58,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
