--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   bloc:
   flutter_bloc: ^9.0.0
   flutter_launcher_icons: ^0.14.3
+  share_plus: ^10.1.4
 
 flutter_launcher_icons:
   android: "launcher_icon"
