--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   flutter_bloc: ^9.0.0
   flutter_launcher_icons: ^0.14.3
   share_plus: ^10.1.4
+  firebase_auth: ^5.4.2
+  firebase_core: ^3.11.0
+  cloud_firestore: ^5.6.3
+  connectivity_plus: ^6.1.2
 
 flutter_launcher_icons:
   android: "launcher_icon"
