--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_core: ^3.11.0
   cloud_firestore: ^5.6.3
   connectivity_plus: ^6.1.2
+  google_sign_in: ^6.2.2
 
 flutter_launcher_icons:
   android: "launcher_icon"
